<resources>
    <string name="app_name">Study Manager</string>
    <string name="schedulePhotoIdMemory">scheduleId1232223</string>
    <string name="title_activity_main">Study Manager</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <array name="notification_times">
        <item>3 hours before the deadline</item>
        <item>5 hours before the deadline</item>
        <item>7 hours before the deadline</item>
        <item>11 hours before the deadline</item>
        <item>1 day before the deadline</item>
        <item>2 days before the deadline</item>
        <item>3 days before the deadline</item>
        <item>4 days before the deadline</item>
        <item>No notification</item>
    </array>
    <array name="repeating_options">
        <item>Remind me every week</item>
        <item>Remind me this week only</item>
    </array>
    <string name="title_activity_add_reminder">AddReminderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="addCourse">Add a course</string>
    <string name="editCourse">Edit Schedule</string>
    <string name="room">Room\'s name</string>
    <string name="allDaysSameTime">The class happens at the same time at all selected days</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="selectDayTime">Select the days and the time for the added course</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="homeTitle">Home</string>
    <string name="assignmentsTitle">Assignments</string>
    <string name="remarksTitle">Calendar</string>
    <string name="notesTitle">Notes</string>
    <string name="flashcardsTitles">Flash Cards</string>
    <string name="remindersTitle">Study\'s Reminders</string>
    <string name="title">Title</string>
    <string name="typeHere">type here</string>
    <string name="reminderRepeat">Reminder\'s Repeat</string>
    <string name="reminderTime">Reminder\'s Time</string>
    <string name="selectTime">Select Time</string>
    <string name="reminderDays">Reminder\'s Day/s</string>
    <string name="selectDays"> Select Day/s</string>
    <string name="describtion">Discribtion</string>\
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="courseName">Course\'s name</string>
    <string name="notifyingTime">notifying time</string>
    <string name="dueAtTimeDate">Due at day, hour</string>
    <string name="selectTimeDate">Select Date and Time</string>
    <string name="typeCourseName">type the name of the course</string>
    <string name="lesson">Lesson</string>
    <string name="addCard">Add Card</string>
    <string name="card1">Card 1</string>
    <string name="theQuestion">The Question</string>
    <string name="typeQuestion">Type the question here</string>
    <string name="theAnswer">The Answer</string>
    <string name="typeAnswer">Type the answer here</string>
    <string name="finishAdding">Finish adding</string>
    <string name="addPhoto">add a photo</string>
    <string name="typeNote">Here is the class\' notes. You can type here.</string>
    <string name="dateAndTime">Date and Time</string>
    <string name="selectCourse">select a course</string>
    <string name="selectLesson">Next, select a lesson or add a lesson</string>
    <string name="prevCard">Previous card</string>
    <string name="flipCard">Flip the card</string>
    <string name="nextCard">Next card</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <string name="restart">Restart</string>
    <string name="closeWSave">Close with saving the changes</string>
    <string name="closeWOSave">Close without saving</string>
    <string name="inputNonUsedCourse">Please input non-used course\'s name</string>
    <string name="inputCourseNameFirst">Please input the course name</string>
    <string name="card">card</string>
    <string name="finishEdit">Finish Editing</string>
    <string name="cantDeleteLastCard">This is the last card that you can\'t remove</string>
    <string name="lessonNotedited">The lesson has not been edited</string>
    <string name="fillLessonField">Please fill lesson\'s field</string>
    <string name="lessonNameRepeated">This lesson\'s name already exist, please select another name</string>
    <string name="fillAllFields">please fill all the fields</string>
    <string name="showPhoto">Show the photo</string>
    <string name="removePhoto">Remove the photo</string>
    <string name="enterDateTimeField">Please enter the date and the time</string>
    <string name="enterValidNotifyTime">Please change the notification time to either none or a valid time</string>
    <string name ="enterdateTimeafter">The inputted time should not be in the past.</string>
    <string name="enterName">Please enter the name</string>
    <string name="inputDesc">Please type a description</string>
    <string name="assignmentAdded">The assignment has been added</string>
    <string name="assignmentEdited">The assignment has been updated</string>
    <string name="dueTime">Due time:</string>
    <string name="dueDate">Due</string>
    <string name="discText">description:</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="selectCourseBefore">Please select a course first</string>
    <string name="noteAdded">The lesson\'s note has been added</string>
    <string name="noteUpdated">The lesson\'s notes have been updated</string>
    <string name="cardsAdded">The flash cards have been added</string>
    <string name="cardEdited">The flash cards have been updated</string>
    <string name="courseAdded">The course has been added</string>
    <string name="theCourse">The course</string>
    <string name="hasBeenDeleted">has been deleted</string>
    <string name="hasBeenedEdited">has been edited</string>
    <string name="deleteLesson">Remove the lesson</string>
    <string name="editLesson">Edit the lesson</string>
    <string name="lessonRemoved">The lesson been removed</string>
    <string name="outOf">out of</string>
    <string name="permissionExternalStorage">please allow the app to read
        external storage in order to show the images</string>
    <string name="remarkForDate">Remarks for the date</string>
    <string name="remarkAdded">The remark has been added</string>
    <string name="remarkEdited">The remark has been updated</string>
    <string name="reminderAdded">The reminder has been added</string>
    <string name="reminderUpdated">The reminder has been updated</string>
    <string name="timeText">time:</string>
    <string name="daysText">days:</string>
    <string name="repeatText">repeating: </string>
    <string name="weekly">weekly</string>
    <string name="once">once</string>
    <string name="pleaseCheckDays">Please check on the days that you would like to select</string>
    <string name="inputStartTime">The class begins at</string>
    <string name="inputFinishTime">The class ends at</string>
    <string name="to">to</string>
    <string name="inputRoom">Please input the room\'s name</string>
    <string name="inputTimeForDays">Please select the time for all selected days</string>
    <string name="coursesSchedule">Courses\' schedule</string>

</resources>
