<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title= "@string/homeTitle" />
        <item
            android:id="@+id/nav_assignment"
            android:title="@string/assignmentsTitle" />
        <item
            android:id="@+id/nav_remark"
            android:title="@string/remarksTitle" />
        <item
            android:id="@+id/nav_notes"
            android:title= "@string/notesTitle" />
        <item
            android:id="@+id/nav_flash"
            android:title= "@string/flashcardsTitles" />
        <item
            android:id="@+id/nav_reminder"
            android:title= "@string/remindersTitle" />
    </group>
</menu>