<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beige"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/peach"
            android:padding="15dp"
            android:text="@string/courseName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/course_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/peach"
            android:padding="15dp"
            android:text="@string/lesson"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/lesson_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/typeHere" />

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginHorizontal="14dp"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/images_layout_addNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/add_photo_add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_button"
                android:text="@string/addPhoto"/>
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <EditText
            android:id="@+id/recorded_note_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/typeNote"
            android:inputType="textMultiLine" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_addnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/orange_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/add_addnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/orange_button"
            android:text="@string/add" />

    </LinearLayout>
</android.widget.LinearLayout>